<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_note"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_priority"
        android:textAlignment="center"
        android:textColor="@color/lying_purple_light"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/green_light_more"
            android:padding="10dp"
            android:text="@string/low"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/yellow_light"
            android:padding="10dp"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/red_light"
            android:padding="10dp"
            android:text="@string/high"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/save"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>